Create: Section 6 Solutions

--- a/src/index.html
+++ b/src/index.html
@@ -250,6 +250,30 @@
                 <img src="../images/main 3.png" alt="Main Image" width="900" height="500"  class="rounded-2xl shadow-lg shadow-blue-500/50">
             </div>
         </section>
+
+
+
+
+        <!-- Section 6 Solutions -->
+
+    <section class="mt-[250px]">
+        <div>
+          <h1 class="text-5xl font-semibold text-center">Solutions</h1>
+          <br>
+        </div>
+
+        <div class="flex justify-center items-center gap-10 mx-[100px] my-[50px] flex-wrap">
+          <p class="border-1 border-gray-300 w-[230px] rounded-[10px]  hover:border-red-500 cursor-pointer p-[10px] text-[20px] text-center">✈️ <br> Hospital & Travel</p>
+          <p class="border-1 border-gray-300 w-[230px] rounded-[10px]  hover:border-red-500 cursor-pointer p-[10px] text-[20px] text-center">🏛️ <br> Museum  & Galleries</p>
+          <p class="border-1 border-gray-300 w-[280px] rounded-[10px]  hover:border-red-500 cursor-pointer p-[10px] text-[20px] text-center">🏠 <br> RealState & Architecture</p>
+          <p class="border-1 border-gray-300 w-[20 0px] rounded-[10px] hover:border-red-500 cursor-pointer p-[10px] text-[20px] text-center">📚 <br>Education</p>
+          <p class="border-1 border-gray-300 w-[180px] rounded-[10px]  hover:border-red-500 cursor-pointer p-[10px] text-[20px] text-center">🏭 <br> Industry</p>
+          <p class="border-1 border-gray-300 w-[230px] rounded-[10px]  hover:border-red-500 cursor-pointer p-[10px] text-[20px] text-center">🏗️ <br> oil & Gas</p>
+          <p class="border-1 border-gray-300 w-[230px] rounded-[10px]  hover:border-red-500 cursor-pointer p-[10px] text-[20px] text-center">💻 <br> Virtual Events</p>
+
+        </div>
+        
+    </section>
        
 
     </main>
