--- a/src/index.html
+++ b/src/index.html
@@ -45,13 +45,13 @@
 
 <!-- Top Header -->
 
-    <header class="mb-[20px] flex justify-center">
-        <section class="flex justify-center items-center gap-20 flex-wrap fixed border-b-1 p-[25px] w-[100%] border-gray-300 bg-white">
+    <header class="mb-[20px] flex justify-center bg-white">
+        <section class="flex justify-center  gap-[50px] items-center flex-wrap fixed border-b-1 p-[25px] w-[100%] border-gray-300 bg-white">
             <div>
                 <img src="../images/Logo.png" alt="Limina Studios Logo" width="200" height="200">
             </div>
             <nav>
-                <ul class="flex justify-center gap-[20px]">
+                <ul class="flex flex-wrap justify-center gap-[20px] p">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Portfolio</a></li>
                     <li>
@@ -426,7 +426,7 @@
 
 
 
-        <!-- Section 11 -->
+  <!-- Section 11 Cards -->
 
         <section class="py-10 bg-white mt-[150px]">
   <div class="text-center mb-10">
@@ -471,12 +471,158 @@
   </div>
 </section>
 
+
+
+
+<!-- Section 12  Form Contact-->
+
+<section class="max-w-7xl mx-auto px-4 py-16 grid md:grid-cols-2 gap-12 items-start mt-[200px]">
+  <!-- Left Section -->
+  <div>
+    <h2 class="text-3xl font-bold mb-4">Want to learn more</h2>
+    <p class="text-gray-700 mb-4">
+      If you’d like to have a more in-depth conversation about how Limina Studios can help your business, please get in touch via this form and we’ll get back to you as soon as possible.
+    </p>
+    <p class="mb-1"><strong>Email :</strong> admin@liminastudios.com</p>
+    <p><strong>Mobile :</strong> 0524764537</p>
+  </div>
+
+  <!-- Right Form Section -->
+  <form class="space-y-4">
+    <input type="text" placeholder="Name" class="w-full border border-gray-300 p-3 rounded-md focus:outline-none focus:ring-2 focus:ring-red-500 bg-gray-50" />
+
+    <input type="email" placeholder="Email" class="w-full border border-gray-300 p-3 rounded-md focus:outline-none focus:ring-2 focus:ring-red-500 bg-gray-50" />
+
+    <textarea placeholder="Message" rows="5" class="w-full border border-gray-300 p-3 rounded-md focus:outline-none focus:ring-2 focus:ring-red-500 bg-gray-50"></textarea>
+
+    <!-- reCAPTCHA Placeholder -->
+    <div class="w-full">
+      <div class="bg-gray-100 border border-gray-300 p-4 rounded shadow text-center text-gray-500 text-sm">
+        protected by reCAPTCHA<br/>
+        <a href="#" class="underline text-blue-600">Privacy</a> - <a href="#" class="underline text-blue-600">Terms</a>
+      </div>
+    </div>
+
+    <!-- Send Button -->
+    <button type="submit" class="bg-red-500 hover:bg-red-600 text-white px-6 py-2 rounded-md inline-flex items-center gap-2">
+      Send <i class="fas fa-arrow-right"></i>
+    </button>
+  </form>
+</section>
+
+
+
        
 
     </main>
 
 
-    <div class="mt-[1000px]"></div>
+
+
+
+
+
+    <!-- Footer -->
+
+     <footer class="bg-gray-100 text-sm mt-10 border-t border-gray-200">
+    <div class="max-w-7xl mx-auto px-4 py-12 grid grid-cols-1 md:grid-cols-4 gap-8">
+
+      <!-- Company Info -->
+      <div>
+        <div class="flex items-center gap-2 mb-3">
+          <img src="../images/Logo.png" alt="Logo" width="150px">
+        </div>
+        <p class="text-gray-600 text-sm">
+          Limina Studios is a Dubai-based Emirati company specializing in virtual tours, digital twins, virtual reality (VR), augmented reality (AR) technologies, photography, and video.
+        </p>
+        <div class="mt-4 space-y-1">
+          <p><i class="fas fa-envelope mr-2"></i>✉  admin@liminastudios.com</p>
+          <p><i class="fas fa-phone-alt mr-2"></i>📞 0524764537</p>
+        </div>
+
+        <div class="mt-4">
+          <h2 class="font-semibold mb-2">Subscribe to our Newsletter</h2>
+          <div class="flex">
+            <input type="email" placeholder="Your email address" class="p-2 border border-gray-300 rounded-l w-full text-sm" />
+            <button class="bg-gray-800 text-white px-4 rounded-r">SignUp</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Solutions -->
+      <div>
+        <h2 class="font-semibold mb-3">Solutions</h2>
+        <ul class="space-y-1 text-gray-600">
+          <li>Virtual Tour</li>
+          <li>CGI Virtual Tour</li>
+          <li>3D Architectural Rendering</li>
+          <li>Photography & Video</li>
+          <li>Virtual Reality</li>
+          <li>Virtual Commerce</li>
+          <li>Indoor Navigation</li>
+          <li>Avatars</li>
+          <li>Connected Workforce</li>
+          <li>Facilities Management</li>
+        </ul>
+      </div>
+
+      <!-- Industries -->
+      <div>
+        <h2 class="font-semibold mb-3">Industries</h2>
+        <ul class="space-y-1 text-gray-600">
+          <li>Real Estate & Architecture</li>
+          <li>Museum & Galleries</li>
+          <li>Retail and Showrooms</li>
+          <li>Hospitality and Travel</li>
+          <li>Industry 4.0</li>
+          <li>Education</li>
+          <li>Virtual Events</li>
+        </ul>
+      </div>
+
+      <!-- Resources & Company Info -->
+      <div>
+        <h2 class="font-semibold mb-3">Resources</h2>
+        <ul class="space-y-1 text-gray-600 mb-4">
+          <li>Blog</li>
+          <li>Case Study</li>
+        </ul>
+
+        <h2 class="font-semibold mb-3">Follow Us</h2>
+        <div class="flex space-x-3 text-lg mb-4">
+          <i class="fab fa-linkedin text-gray-700 hover:text-black"></i>
+          <i class="fab fa-facebook text-gray-700 hover:text-black"></i>
+          <i class="fab fa-instagram text-gray-700 hover:text-black"></i>
+          <i class="fab fa-x-twitter text-gray-700 hover:text-black"></i>
+          <i class="fab fa-youtube text-gray-700 hover:text-black"></i>
+        </div>
+
+        <div class="mb-4">
+          <img src="../images/dta icon.png" alt="DTA Award" width="100px"/>
+        </div>
+
+        <h2 class="font-semibold mb-2">Offices</h2>
+        <p class="text-gray-600">
+          <strong>Dubai</strong><br/>
+          Office #2102, 21st floor,<br/>
+          Grosvenor Business Tower,<br/>
+          Barsha Heights, Tecom, Dubai,<br/>
+          UAE.
+        </p>
+      </div>
+    </div>
+
+    <!-- Bottom Line -->
+    <div class="text-center text-gray-500 text-xs py-4 border-t border-gray-200">
+      © 2025 Limina Studios, All rights reserved.
+    </div>
+  </footer>
+
+
+
+
+
+
     <script src="app.js"></script>
 </body>
 </html>
